# yacoin

./: Cargo.toml  YACOIN_QUICKSTART.md  run.sh  setup-genesis.sh  shielded-pool-genesis.yaml
.github/workflows/: docs.yml  publish-windows-tarball.yml
account-decoder/: Cargo.toml
account-decoder-client-types/: Cargo.toml
accounts-cluster-bench/: Cargo.toml
accounts-db/: Cargo.toml
accounts-db/store-histogram/: Cargo.toml
accounts-db/store-tool/: Cargo.toml
banking-bench/: Cargo.toml
banking-stage-ingress-types/: Cargo.toml
banks-client/: Cargo.toml
banks-interface/: Cargo.toml
banks-server/: Cargo.toml
bench-streamer/: Cargo.toml
bench-tps/: Cargo.toml
bloom/: Cargo.toml
bls-cert-verify/: Cargo.toml
bls12-381/: Cargo.toml
bls12-381/src/: encoding.rs  groth16.rs  lib.rs
bucket_map/: Cargo.toml
builtins/: Cargo.toml
builtins-default-costs/: Cargo.toml
builtins/src/: lib.rs
ci/xtask/: Cargo.toml
clap-utils/: Cargo.toml
clap-v3-utils/: Cargo.toml
cli/: Cargo.toml
cli-config/: Cargo.toml
cli-output/: Cargo.toml
cli-output/src/: cli_output.rs  display.rs
cli/src/: clap_app.rs  cli.rs  cluster_query.rs  nonce.rs  program.rs  stake.rs  validator_info.rs  vote.rs  wallet.rs
client/: Cargo.toml
client-test/: Cargo.toml
compute-budget/: Cargo.toml
compute-budget-instruction/: Cargo.toml
compute-budget/src/: compute_budget.rs
connection-cache/: Cargo.toml
core/: Cargo.toml
cost-model/: Cargo.toml
dev-bins/: Cargo.toml
download-utils/: Cargo.toml
entry/: Cargo.toml
faucet/: Cargo.toml
faucet/src/: faucet.rs
feature-set/: Cargo.toml
fee/: Cargo.toml
fs/: Cargo.toml
genesis/: Cargo.toml
genesis-accounts/: 7AXDB9ApfK5YiDE2iQcyTFjMyScDkaWiogdmp6SoQtuE.json  CgK6TjaehogG3waQCS4Li1aFdTfJ9xNq91Px31iNcDhD.json  FfuR6yCrrFskgrWYPzc8VQa5piCksL93a33tMB3UsXjp.json  of5iaUYEQkvAeoQbpwBFgDqudTP5ZHB94eLeBSxvPNR.json
genesis-utils/: Cargo.toml
genesis/src/: main.rs
geyser-plugin-interface/: Cargo.toml
geyser-plugin-manager/: Cargo.toml
gossip/: Cargo.toml
gossip-bin/: Cargo.toml
install/: Cargo.toml
io-uring/: Cargo.toml
keygen/: Cargo.toml
keygen/src/: keygen.rs
lattice-hash/: Cargo.toml
leader-schedule/: Cargo.toml
ledger/: Cargo.toml
ledger-tool/: Cargo.toml
local-cluster/: Cargo.toml
logger/: Cargo.toml
measure/: Cargo.toml
merkle-tree/: Cargo.toml
metrics/: Cargo.toml
net-utils/: Cargo.toml
notifier/: Cargo.toml
perf/: Cargo.toml
platform-tools-sdk/cargo-build-sbf/: Cargo.toml
platform-tools-sdk/cargo-test-sbf/: Cargo.toml
poh/: Cargo.toml
poh-bench/: Cargo.toml
precompiles/: Cargo.toml
program-binaries/: Cargo.toml
program-runtime/: Cargo.toml
program-runtime/src/: execution_budget.rs
program-test/: Cargo.toml
programs/bpf-loader-tests/: Cargo.toml
programs/bpf_loader/: Cargo.toml
programs/compute-budget/: Cargo.toml
programs/compute-budget-bench/: Cargo.toml
programs/ed25519-tests/: Cargo.toml
programs/loader-v4/: Cargo.toml
programs/sbf/: Cargo.toml
programs/sbf/rust/128bit/: Cargo.toml
programs/sbf/rust/128bit_dep/: Cargo.toml
programs/sbf/rust/account_mem/: Cargo.toml
programs/shielded-transfer/: Cargo.toml  INTEGRATION.md
programs/shielded-transfer/src/: accounts.rs  commitment_tree.rs  error.rs  genesis.rs  instruction.rs  lib.rs  native.rs  nullifier_set.rs  processor.rs  rpc.rs  state.rs
programs/shielded-transfer/src/crypto/: diversifier.rs  gpu_prover.rs  groth16.rs  keys.rs  memo.rs  mod.rs  note.rs  ownership.rs  pedersen.rs  stealth.rs  universal_asset.rs  viewing.rs
programs/system/: Cargo.toml
programs/vote/: Cargo.toml
programs/zk-elgamal-proof/: Cargo.toml
programs/zk-elgamal-proof-tests/: Cargo.toml
programs/zk-token-proof/: Cargo.toml
pubsub-client/: Cargo.toml
quic-client/: Cargo.toml
random/: Cargo.toml
rayon-threadlimit/: Cargo.toml
remote-wallet/: Cargo.toml
reserved-account-keys/: Cargo.toml
rpc/: Cargo.toml
rpc-client/: Cargo.toml
rpc-client-api/: Cargo.toml
rpc-client-nonce-utils/: Cargo.toml
rpc-client-types/: Cargo.toml
rpc-test/: Cargo.toml
runtime/: Cargo.toml
runtime-transaction/: Cargo.toml
scheduler-bindings/: Cargo.toml
scheduling-utils/: Cargo.toml
scripts/: deploy-devnet.sh  fetch-params.sh  launch-yacoin.sh  run.sh  setup-shielded-genesis.sh  start-yacoin-testnet.sh  test-shielded.sh
sdk/shielded-wallet/: Cargo.toml
sdk/shielded-wallet/src/: commitment.rs  error.rs  keys.rs  lib.rs  note.rs  prover.rs  transaction.rs  wallet.rs
send-transaction-service/: Cargo.toml
snapshots/: Cargo.toml
stake-accounts/: Cargo.toml
storage-bigtable/: Cargo.toml
storage-proto/: Cargo.toml
streamer/: Cargo.toml
svm/: Cargo.toml
svm-callback/: Cargo.toml
svm-feature-set/: Cargo.toml
svm-log-collector/: Cargo.toml
svm-measure/: Cargo.toml
svm-rent-calculator/: Cargo.toml
svm-test-harness/: Cargo.toml
svm-test-harness/fixture/: Cargo.toml
svm-test-harness/instr/: Cargo.toml
svm-timings/: Cargo.toml
svm-transaction/: Cargo.toml
svm-type-overrides/: Cargo.toml
syscalls/: Cargo.toml
syscalls/src/: groth16.rs  lib.rs
test-validator/: Cargo.toml
tls-utils/: Cargo.toml
tokens/: Cargo.toml
tps-client/: Cargo.toml
tpu-client/: Cargo.toml
tpu-client-next/: Cargo.toml
transaction-context/: Cargo.toml
transaction-metrics-tracker/: Cargo.toml
transaction-status/: Cargo.toml
transaction-status-client-types/: Cargo.toml
transaction-view/: Cargo.toml
turbine/: Cargo.toml
udp-client/: Cargo.toml
unified-scheduler-logic/: Cargo.toml
unified-scheduler-pool/: Cargo.toml
validator/: Cargo.toml
validator/src/: cli.rs
version/: Cargo.toml
vote/: Cargo.toml
votor/: Cargo.toml
votor-messages/: Cargo.toml
watchtower/: Cargo.toml
xdp/: Cargo.toml
xdp-ebpf/: Cargo.toml
yacoin/: Cargo.toml
yacoin-cli/: Cargo.toml
yacoin-cli/src/: main.rs
yacoin-test-validator/: Cargo.toml
yacoin-test-validator/src/: main.rs
yacoin/src/: genesis.rs  keygen.rs  main.rs  validator.rs
(+59 files in other folders)
