[package]
name = "solana-faucet"
description = "Solana Faucet"
documentation = "https://docs.rs/solana-faucet"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[lib]
crate-type = ["lib"]
name = "solana_faucet"

[[bin]]
name = "yacoin-faucet"
path = "src/bin/faucet.rs"
required-features = ["agave-unstable-api"]

[features]
agave-unstable-api = []
dev-context-only-utils = []

[dependencies]
agave-logger = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
solana-clap-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-cli-output = { workspace = true }
solana-hash = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-message = { workspace = true }
solana-metrics = { workspace = true }
solana-net-utils = { workspace = true }
solana-packet = { workspace = true }
solana-pubkey = { workspace = true, features = ["rand"] }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
solana-system-transaction = { workspace = true }
solana-transaction = { workspace = true }
solana-version = { workspace = true }
spl-memo-interface = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
solana-faucet = { path = ".", features = ["agave-unstable-api", "dev-context-only-utils"] }
