[package]
name = "solana-test-validator"
description = "YaCoin Test Validator - Local development node with shielded transactions"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[[bin]]
name = "solana-test-validator"
path = "src/main.rs"

[dependencies]
# YaCoin shielded transfer
yacoin-shielded-transfer = { path = "../programs/shielded-transfer", features = ["sapling"] }

# Solana validator
agave-validator = { path = "../validator" }
solana-test-validator = { workspace = true }
agave-logger = { path = "../logger" }

# Solana SDK
solana-account = { workspace = true }
solana-clap-utils = { workspace = true }
solana-cli-config = { workspace = true }
solana-clock = { workspace = true }
solana-core = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-faucet = { workspace = true }
solana-inflation = { workspace = true }
solana-keypair = { workspace = true }
solana-native-token = { workspace = true }
solana-net-utils = { workspace = true }
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-rpc = { workspace = true }
solana-rpc-client = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
solana-version = { workspace = true }

# Async
tokio = { workspace = true }
crossbeam-channel = { workspace = true }

# CLI
clap = { workspace = true }

# Utilities
log = { workspace = true }
itertools = { workspace = true }

[target.'cfg(not(any(target_env = "msvc", target_os = "freebsd")))'.dependencies]
jemallocator = { workspace = true }

[features]
default = []

[lints]
workspace = true
