[package]
name = "yacoin"
version = "0.1.0"
edition = "2021"
description = "YaCoin - High-performance blockchain with zk-SNARK privacy"
license = "Apache-2.0"

[[bin]]
name = "yacoin"
path = "src/main.rs"

[[bin]]
name = "solana-validator"
path = "src/validator.rs"

[[bin]]
name = "solana-keygen"
path = "src/keygen.rs"

[[bin]]
name = "solana-genesis"
path = "src/genesis.rs"

[dependencies]
which = "6.0"
