[package]
name = "yacoin-shielded-wallet"
description = "YaCoin Shielded Wallet SDK - Create and manage shielded transactions"
version = "0.1.0"
authors = ["YaCoin Developers"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
# YaCoin shielded transfer
yacoin-shielded-transfer = { path = "../../programs/shielded-transfer", features = ["sapling"] }

# Core dependencies
solana-pubkey = { workspace = true }
solana-transaction = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-signer = { workspace = true }

# Crypto
rand = "0.8"
rand_core = "0.6"
jubjub = "0.10"
ff = "0.13"
group = { workspace = true }
blake2b_simd = "1.0"
chacha20poly1305 = "0.10"
bls12_381 = "0.8"
bellman = { version = "0.14", default-features = false, features = ["groth16"] }

# Sapling proof generation
zcash_proofs = "0.19"
zcash_primitives = "0.19"
incrementalmerkletree = "0.8"

# Serialization
borsh = { workspace = true }
serde = { workspace = true }
serde_json = "1.0"
hex = "0.4"

# Utilities
thiserror = { workspace = true }
dirs = "5.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[lints]
workspace = true
