[package]
name = "yacoin-shielded-wallet"
version = "0.1.0"
edition = "2021"
description = "YaCoin shielded wallet SDK - uses our own crypto primitives"
license = "Apache-2.0"

[features]
default = []
# Enable full proof generation (requires Sapling params)
prover = ["bellman", "rand_core", "sapling-crypto", "incrementalmerkletree", "zcash_spec"]

[dependencies]
# Our own crypto primitives from shielded-transfer program
# We'll copy the essential types here to avoid circular dependencies

# Curve operations
jubjub = "0.10"
bls12_381 = "0.8"
group = "0.13"
ff = "0.13"

# Proof system
bellman = { version = "0.14", optional = true }

# Sapling circuit (real zk-SNARK proof generation)
sapling-crypto = { version = "0.6", optional = true, default-features = false, features = ["temporary-zcashd", "circuit"] }

# Zcash spec (for PRF expansion)
zcash_spec = { version = "0.2", optional = true }

# Merkle tree support for Sapling
incrementalmerkletree = { version = "0.8", optional = true }

# Hashing
blake2b_simd = "1.0"
blake2s_simd = "1.0"

# Encryption
chacha20poly1305 = "0.10"

# Randomness
rand = "0.8"
rand_core = { version = "0.6", optional = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["hex"] }

# Filesystem
dirs = "5.0"

# Error handling
thiserror = "1.0"

# Encoding
hex = "0.4"

[dev-dependencies]
tempfile = "3.0"
